Fix clipping in SettingsUI, refactor for simplified code

--- a/src/main/resources/stylesheets/settings-ui.css
+++ b/src/main/resources/stylesheets/settings-ui.css
@@ -1,21 +1,8 @@
-.scroll-pane {
+.pane {
     -fx-background-color: rgba(255, 205, 112, 0.8);
     -fx-background-radius: 5px;
     -fx-border-color: rgba(0, 0, 0, 0.9);
     -fx-border-radius: 5px;
-}
-
-.scroll-pane .track {
-    -fx-opacity: 0.8;
-}
-
-.scroll-pane .scroll-bar {
-    -fx-background-color: rgba(255, 205, 112, 0.8);
-    -fx-opacity: 0.8;
-}
-
-.scroll-pane > .viewport {
-    -fx-background-color: transparent;
 }
 
 .vbox {
